# outreach-hub

./: .gitignore  CLAUDE.md  DOCS.md  README.en.md  README.md  _login_left.py  build.ps1  clean_inactive_tg_handles.py  clean_inactive_tg_handles_v2.py  config.py  db.py  inspect_tg_web.py  main.py  ocr_compare.py  ocr_test.py  pyproject.toml  requirements.txt  run_server.bat  test_clean.py  test_telegram_api.py  ui_inspect.py  web.py  web_server.py
.claude/: settings.local.json
docs/: tutorial.zh.md
gui/: app.py  tab_dashboard.py  tab_history.py  tab_messages.py  tab_parser.py  tab_scraper.py  tab_sender.py  tab_settings.py  thread_bridge.py
scripts/: diag_x_profile.py  inject_x_cookie.py  install.ps1  install.sh  install_browsers.sh  start_chrome_cdp.bat  start_chrome_cdp.sh
server/: api_server.py
web/: index.html
workers/: base_worker.py  browser_fingerprint.py  browser_stealth.py  campaign_worker.py  chainscope_worker.py  crunchbase_discover_worker.py  cryptorank_worker.py  email_sender_worker.py  manual_import_worker.py  parser_worker.py  rootdata_worker.py  scraper_worker.py  telethon_auth.py  tg_sender_mac_worker.py  tg_sender_web_worker.py  tg_sender_worker.py  tgleft_worker.py  token_finder_worker.py  x_profile_search_worker.py  x_sender_pw_worker.py  x_sender_worker.py
