[project]
name = "outreach-hub"
version = "1.0.0"
description = "Web3 Outreach Hub — 自动化触达工具（TG/X DM 发送、官网爬取、联系人管理）"
requires-python = ">=3.11,<3.14"
dependencies = [
    # GUI
    "customtkinter>=5.2.0,<6",
    # 浏览器自动化
    "playwright>=1.40.0,<2",
    "undetected-chromedriver>=3.5.0,<4",
    # Telegram
    "telethon>=1.34.0,<2",
    # 数据处理
    "pandas>=2.0.0,<3",
    "openpyxl>=3.1.0,<4",
    # 图像处理
    "pillow>=10.0.0,<11",
    # HTML 解析
    "beautifulsoup4>=4.12.0,<5",
    # HTTP / API
    "requests>=2.31.0,<3",
]

[project.optional-dependencies]

[dependency-groups]

